# LinearRegression

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
data/raw/: housing_prices_sample.csv
notebooks/: 02_housing_linear_regression_curve.ipynb
scripts/: plot_housing_linear_curve.py  train_housing_lasso_alpha_sweep.py  train_housing_multifeature_linear.py  train_housing_multifeature_scaled_linear.py  train_housing_polynomial.py
scripts/linear_regression/: train_baseline.py  train_housing_elastic_net_cv.py  train_housing_ridge_alpha_sweep.py
scripts/logistic_regression/: step1_raw_logistic_regression_baseline.py  step2_logistic_regression_with_scaling.py  step3_logistic_regression_l2_c_tuning.py  step4_logistic_regression_l1_lasso.py  step5_logistic_regression_elastic_net.py  step6_logistic_regression_threshold_tuning.py
src/ml_training_practice/: __init__.py  data.py  modeling.py  preprocessing.py  visualization.py
tests/: test_modeling.py
