[project]
name = "ml-training-practice"
version = "0.1.0"
description = "Machine learning training and practice project"
readme = "README.md"
authors = [
    { name = "Dawid Kawiak", email = "d.kawiak@selleo.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[project.scripts]
ml-training-practice = "ml_training_practice:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.5",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
